# platform.core.appfw.shortcut

./: AUTHORS  CMakeLists.txt  LICENSE  libshortcut.manifest  project.config  sample.xml  shortcut.pc.in  test_db_builder.sh
TC/: config
TC/results/: build-tar-result-1388117141.html  build-tar-result-1388117277.html  build-tar-result-1388117423.html  build-tar-result-1388117533.html  exec-tar-result-1388117150.html
TC/testcase/: tslist  utc_shortcut.c
TC/tet_tmp_dir/23996aa/testcase/: utc_dynamicbox_service.c
debian/: changelog  control  copyright  libshortcut-dev.install.in  libshortcut.install.in  libslp-shortcut-dev.install.in  rules
doc/: shortcut_doc.h
doc_prod/: shortcut_doc.h
include/: SLP_shortcut_PG.h  secom_socket.h  shortcut.h
lib/: CMakeLists.txt  LICENSE  shortcut.pc.in
lib/include/: dlist.h  secom_socket.h  shortcut.h  shortcut_PG.h  shortcut_db.h  shortcut_internal.h  shortcut_manager.h  shortcut_private.h  shortcut_product.h
lib/src/: dlist.c  icon.c  main.c  shortcut_db.c  shortcut_manager.c
packaging/: libshortcut.changes  libshortcut.manifest  libshortcut.spec  libslp-shortcut-0.spec  libslp-shortcut.spec  shortcut.spec
pkgmgr_homescreen/: CMakeLists.txt  homescreen.xml
pkgmgr_homescreen/src/: service_register.c
pkgmgr_shortcut/: CMakeLists.txt
pkgmgr_shortcut/include/: dlist.h
pkgmgr_shortcut/src/: dlist.c  service_register.c
src/: main.c  secom_socket.c
test/: Makefile  application.c  homescreen.c  icon.c  server.c  shortcut.c
